--- a/.github/workflows/config_CI.yml
+++ b/.github/workflows/config_CI.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'  # Use JDK 11
-          distribution: 'adoptopenjdk'
+          distribution: 'temurin'
 
       # Step 3: Cache Gradle dependencies to speed up builds
       - name: Cache Gradle dependencies
